--- a/CSRNanicolina/.classpath
+++ b/CSRNanicolina/.classpath
@@ -3,5 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/IC/workspace/google-gson-stream-1.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/IC/workspace/gson-1.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/IC/workspace/gson-1.7.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/IC/workspace/gson-1.7.1-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
