--- a/AndEngineUbicompTest/AndroidManifest.xml
+++ b/AndEngineUbicompTest/AndroidManifest.xml
@@ -19,5 +19,10 @@
             	<action android:name="br.uff.ic.ubicomp.testes.knowledge.REMOTE_SERVICE"/>
       		</intent-filter>
         </service>
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+        <uses-permission android:name="android.permission.WAKE_LOCK" />
     </application>
 </manifest>
