--- a/Nanicolina-shsim/nbproject/project.properties
+++ b/Nanicolina-shsim/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=nanicolinashsim.Main
+main.class=nanicolinashsim.InterfacePrototyping
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
