--- a/AndEngineUbicompTest/.classpath
+++ b/AndEngineUbicompTest/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/andengine.jar"/>
 	<classpathentry kind="lib" path="lib/andEngineMultiTouchExtension.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.0-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
