adding database in use

--- a/Nanicolina-shsim/nbproject/project.properties
+++ b/Nanicolina-shsim/nbproject/project.properties
@@ -25,9 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Nanicolina-shsim.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlitejdbc-v056.jar=/home/matheus/Downloads/sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlitejdbc-v056.jar}:\
+    ${libs.SQLite.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
