--- a/Nanicolina-shsim/nbproject/private/private.properties
+++ b/Nanicolina-shsim/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/matheus/.netbeans/6.7/build.properties
+user.properties.file=C:\\Users\\Mareli\\.netbeans\\6.9\\build.properties
