--- a/ResourceManager/.classpath
+++ b/ResourceManager/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/workspace/nanicolina-shsim/AndEngineUbicompTest/lib/gson-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/workspace/nanicolina-shsim/AndEngineUbicompTest/lib/gson-2.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mareli/workspace/nanicolina-shsim/AndEngineUbicompTest/lib/gson-2.0-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
